--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "nestjs-telegraf": "^2.8.1",
+    "node-cron": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3"
@@ -44,6 +45,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
